# python-langstrothclient

./: .git-blame-ignore-revs  .gitreview  .stestr.conf  README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  rules
langstrothclient/: __init__.py  base.py  client.py  constants.py
langstrothclient/osc/: plugin.py
langstrothclient/osc/v1/: outages.py
langstrothclient/tests/unit/: fakes.py
langstrothclient/tests/unit/v1/: fakes.py  test_outages.py
langstrothclient/v1/: client.py  outages.py
