[wheel]
universal = 1

[metadata]
    name = python-langstrothclient
    summary = Client for the Nectar Outage system
    author = Stephen Crawley
    author_email = stephen.crawley@ardc.edu.au
    home_page = https://github.com/NeCTAR-RC/python-langstrothclient
    classifier =
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python :: 3
        Operating System :: OS Independent

[files]
    packages =
        langstrothclient

[entrypoints]
openstack.cli.extension =
    outage = langstrothclient.osc.plugin
    
openstack.outage.v1 =
    outage list = langstrothclient.osc.v1.outages:ListOutages
    outage show = langstrothclient.osc.v1.outages:ShowOutage
