[metadata]
name = langstrothclient
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Client for the Nectar Operations system (Langstroth)
description_file =
    README.md
description_content_type = text/markdown
keywords = langstroth
home_page = https://github.com/NeCTAR-RC/python-langstrothclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[files]
packages = langstrothclient
include_package_data = True

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
openstack.cli.extension =
    nectar_ops = langstrothclient.osc.plugin
openstack.nectar_ops.v1 =
    outage list = langstrothclient.osc.v1.outages:ListOutages
    outage show = langstrothclient.osc.v1.outages:ShowOutage
